fix(exercizer): #34754, remove useless scrollbar on table.info

--- a/src/main/resources/public/sass/global/_exercizer-specifics.scss
+++ b/src/main/resources/public/sass/global/_exercizer-specifics.scss
@@ -827,8 +827,7 @@ body.exercizer {
     float:left;
     tbody {
       max-height:450px;
-      overflow:auto;
-      overflow-x:hidden;
+      overflow:hidden;
       display:block;
     }
   }
